roles/argo/files/argoworkflows-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argoworkflows-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /argo
    forceSlash: true
