roles/argo/files/argoworkflows-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argoworkflows-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`workflows.jauwlfd.com`) && PathPrefix(`/argo`)
      priority: 10
      services:
        - name: argo-workflows-server
          port: 2746
      middlewares:
        - name: argoworkflows-stripprefix
  tls: {}
